--- a/app/src/main/res/layout/fragment_roulette_main.xml
+++ b/app/src/main/res/layout/fragment_roulette_main.xml
@@ -49,11 +49,12 @@
         android:id="@+id/rl_filled"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingTop="120dp"
-        android:paddingBottom="140dp">
+       >
 
     <android.support.v7.widget.RecyclerView
+        android:clipToPadding="false"
+        android:paddingTop="120dp"
+        android:paddingBottom="140dp"
         android:id="@+id/recycler_roulette"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
