--- a/app/src/main/res/layout/row_developer.xml
+++ b/app/src/main/res/layout/row_developer.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_marginBottom="12dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
        >
 
         <android.support.v7.widget.CardView
@@ -46,7 +46,7 @@
                     app:cardElevation="0dp">
 
                     <ImageView
-                        android:id="@+id/blapic"
+                        android:id="@+id/iv"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:scaleType="centerCrop"
@@ -59,7 +59,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/blaName"
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -82,7 +82,7 @@
 
 
                     <TextView
-                        android:id="@+id/bladesc"
+                        android:id="@+id/desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
