--- a/app/src/main/res/layout/row_sponsors.xml
+++ b/app/src/main/res/layout/row_sponsors.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/border_shadow"
                 android:orientation="vertical">
 
@@ -53,7 +53,7 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     app:cardBackgroundColor="#eeeeee"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="20dp"
@@ -63,7 +63,7 @@
                 <ImageView
                     android:minHeight="150dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="250dp"
                     android:padding="4dp"
                     android:scaleType="centerInside"
                     android:id="@+id/iv_sponsor"
