--- a/app/src/main/res/layout/row_developer.xml
+++ b/app/src/main/res/layout/row_developer.xml
@@ -50,7 +50,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/androidify_1" />
+                        android:background="#ffffff" />
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
