--- a/app/src/main/res/layout/fragment_roulette_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_roulette_leaderboard.xml
@@ -8,6 +8,8 @@
     tools:context="bitspilani.bosm.roulette.RouletteLeaderboardFragment">
 
 <RelativeLayout
+    android:elevation="10dp"
+    android:padding="10dp"
     android:layout_marginTop="@dimen/header_top_margin"
     android:layout_centerHorizontal="true"
     android:layout_width="wrap_content"
@@ -44,9 +46,6 @@
 
         </android.support.v7.widget.CardView>
 
-
-
-
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
@@ -78,7 +77,7 @@
                 android:gravity="center"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="287"
+                android:text="-"
                 android:textColor="@color/background2"
                 android:textSize="22sp" />
 
@@ -89,10 +88,9 @@
 
 </RelativeLayout>
 
-
-
                 <android.support.v7.widget.RecyclerView
                     android:paddingTop="130dp"
+                    android:paddingBottom="120dp"
                     android:clipToPadding="false"
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
